# tourney-scheduler

./: LICENSE  index.html  pyproject.toml  requirements.txt  run.py
notebooks/: dev-1.ipynb  dev-2.ipynb  tournament-schedule-1.ipynb
src/: run.py  schedule.html
src/tourney/: match.py  referees.py
src/tourney/round_robin/: scheduler.py
tests/: test_time_utils.py  time_utils.py
tourney/: match.py  match_utils.py  referees.py  scheduler.py  time_utils.py  tournament.py
tourney/elimination/: scheduler.py
