[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tourney"
version = "0.0.2"
authors = [
    {name = "Erik Schomburg", email = "eschomburg@gmail.com"},
]
description = ""
requires-python = ">=3.8"
dependencies = [
    "more-itertools",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]
jupyter = ["jupyter"]

[tool.setuptools.packages.find]
exclude = ["notebooks", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
